--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1153,6 +1153,16 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2009},
   publisher={National Acad Sciences}
 }
+@article{zhao2009mie,
+  title={Mie resonance-based dielectric metamaterials},
+  author={Zhao, Qian and Zhou, Ji and Zhang, Fuli and Lippens, Didier},
+  journal={Materials Today},
+  volume={12},
+  number={12},
+  pages={60--69},
+  year={2009},
+  publisher={Elsevier}
+}
 
 
 ## TODO new thing, they seem not to have true individual behaviour
