--- a/numeric.tex
+++ b/numeric.tex
@@ -334,7 +334,7 @@ Free	    & Negligible				& Resistive medium						& \shortstack{doped semiconduct
 When the procedure for one time-step in FDTD is defined, it can serve as the linear operator $\mathcal L$ in the generic formulation of the eigenfunction problem:
 $$\mathcal{L} \psi = e^{\ii \omega t} \psi,$$
 where the function $\psi$ represents either of the electric or magnetic fields. 
-%The particular form for the linear operator $\mathcal{L}$ is  as has already been developed for the proof of the Bloch theorem in Eq. (\label{eq_eigen_e}).
+%The particular form for the linear operator $\mathcal{L}$ is  as has already been developed for the proof of the Bloch theorem in Eq. (\ref{eq_eigen_e}).
 % TODO maybe not! The Hamiltonian might be SQUARE of the "Maxwellian"!
 
 Both time- and frequency-domain simulations used for this thesis use complex numbers to represent all field components.
